# cLLama-CPU

llama.cpp/: .gitignore  Makefile  Package.swift  convert_llama_ggml_to_gguf.py  log.txt  lognvm.txt  lognvm_dy.txt  lograid.txt  lograid_dy.txt  logssd.txt  logssd_dy.txt  results.csv  short.py
llama.cpp/abbreviation/: short.py
llama.cpp/ci/: README.md
llama.cpp/common/: common.cpp  common.h
llama.cpp/examples/main/: CMakeLists.txt  main.cpp
llama.cpp/ggml/include/: ggml.h
llama.cpp/ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend.c  ggml-error.c  ggml-no-dt.c  ggml-node.c  ggml-quants.c  ggml-quants.h  ggml-threadpool.c  ggml.c  test  test.c
llama.cpp/ggml/src/coolling-util/: CThreadPool.c  CThreadPool.h  CpuMonitor.c  CpuMonitor.h  a.out  cacheinfo.c  test2.c  unique_queue.c  unique_queue.h
llama.cpp/include/: llama.h
llama.cpp/scripts/: sync-ggml-am.sh  sync-ggml.sh
llama.cpp/src/: llama.cpp
